<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2021 Contributors to Eclipse Foundation.
    Copyright (c) 2010, 2019 Oracle and/or its affiliates. All rights reserved.

    This program and the accompanying materials are made available under the
    terms of the Eclipse Public License v. 2.0, which is available at
    http://www.eclipse.org/legal/epl-2.0.

    This Source Code may also be made available under the following Secondary
    Licenses when the conditions for such availability set forth in the
    Eclipse Public License v. 2.0 are satisfied: GNU General Public License,
    version 2 with the GNU Classpath Exception, which is available at
    https://www.gnu.org/software/classpath/license.html.

    SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <parent>
        <groupId>org.eclipse.ee4j</groupId>
        <artifactId>project</artifactId>
        <version>1.0.6</version>
        <relativePath/>
    </parent>

    <groupId>org.glassfish.exousia</groupId>
    <artifactId>exousia</artifactId>
    <version>1.0.1-SNAPSHOT</version>

    <name>Exousia</name>
    <description>
    	Eclipse (future) compatible implementation of Jakarta Authorization.
    </description>
    <url>https://projects.eclipse.org/projects/ee4j.exousia</url>
    <inceptionYear>2019</inceptionYear>
 
    <licenses>
        <license>
            <name>EPL 2.0</name>
            <url>https://www.eclipse.org/legal/epl-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>arjan.tijms</id>
            <name>Arjan Tijms</name>
            <email>arjan.tijms@gmail.com</email>
        </developer>
        <developer>
            <id>jakarta-ee4j-exousia</id>
            <name>Exousia Developers</name>
            <organization>Eclipse Foundation</organization>
            <email>exousia-dev@eclipse.org</email>
        </developer>
    </developers>
    <contributors>
       <contributor>
           <name>Exousia Contributors</name>
           <email>exousia-dev@eclipse.org</email>
           <url>https://github.com/eclipse-ee4j/exousia/graphs/contributors</url>
       </contributor>
    </contributors>
    
    <mailingLists>
        <mailingList>
            <name>Jakarta Authorization dev mailing list</name>
            <post>exousia-dev@eclipse.org</post>
            <subscribe>https://dev.eclipse.org/mailman/listinfo/exousia-dev</subscribe>
            <unsubscribe>https://dev.eclipse.org/mailman/listinfo/exousia-dev</unsubscribe>
            <archive>https://dev.eclipse.org/mhonarc/lists/exousia-dev</archive>
        </mailingList>
    </mailingLists>

    <scm>
        <url>scm:git:https://github.com/eclipse-ee4j/exousia.git</url>
        <connection>scm:git:git://github.com/eclipse-ee4j/exousia.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/eclipse-ee4j/exousia.git</developerConnection>
    </scm>
    <issueManagement>
        <system>github</system>
        <url>https://github.com/eclipse-ee4j/exousia/issues</url>
    </issueManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
            <version>5.0.0</version>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>jakarta.authorization</groupId>
            <artifactId>jakarta.authorization-api</artifactId>
            <version>2.0.0</version>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
      
        
        <!-- Tests -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.properties</include>
                    <include>**/*.xml</include>
                </includes>
            </resource>
            <resource>
                <directory>${project.basedir}/..</directory>
                <includes>
                    <include>LICENSE.md</include>
                    <include>NOTICE.md</include>
                </includes>
                <targetPath>META-INF</targetPath>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
    
        <plugins>
            <!-- Sets minimal Maven version to 3.5.4 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.5.4</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            
            
            <!-- Creates the OSGi MANIFEST.MF file -->
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>5.1.1</version>
                <extensions>true</extensions>
                <configuration>
                    <instructions>
                        <Automatic-Module-Name>org.glassfish.exousia</Automatic-Module-Name>
                        <Extension-Name>org.glassfish.exousia</Extension-Name>
                        
                        <Bundle-SymbolicName>org.glassfish.exousia</Bundle-SymbolicName>
                        <Bundle-Version>${project.version}</Bundle-Version>
                        <Bundle-Name>Exousia Jakarta Authorization Implementation ${project.version}</Bundle-Name>
                        <Bundle-Description>Eclipse Jakarta Authorization Implementation (jakarta.authorization/2.0) ${project.version}</Bundle-Description>  
                        
                        <Specification-Title>Jakarta Authorization</Specification-Title>
                        <Specification-Version>2.0</Specification-Version>
                        <Specification-Vendor>Eclipse Foundation</Specification-Vendor>
                        
                        <Implementation-Title>Exousia</Implementation-Title> 
                        <Implementation-Version>${project.version}</Implementation-Version>
                        <Implementation-Vendor>Eclipse</Implementation-Vendor> 
                        <Implementation-Vendor-Id>org.glassfish</Implementation-Vendor-Id>
                        
                        <Export-Package>
                            org.glassfish.exousia.*
                        </Export-Package>
                        <Import-Package>
                            !org.apache.tomee.catalina,!org.apache.tomee.catalina,!weblogic.security.jacc.simpleprovider,
                            !weblogic.security.jacc,!org.glassfish.deployment.common,!org.glassfish.internal.api,
                            !org.jboss.as.security.service,!org.apache.geronimo.security.jacc.mappingprovider,!org.jboss.security,
                            *
                        </Import-Package>
                    </instructions>
                </configuration>
                <executions>
                    <execution>
                        <id>bundle-manifest</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>manifest</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            
            <!-- Adds the manifest file created by the org.apache.felix:maven-bundle-plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <archive>
                        <manifestFile>
                            ${project.build.outputDirectory}/META-INF/MANIFEST.MF
                        </manifestFile>
                    </archive>
                </configuration>
            </plugin>
           

            <!-- Configure the jar with the sources. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            
            <!-- Create Javadoc for API jar -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <source>11</source>
                            <detectJavaApiLink>false</detectJavaApiLink>
                            <additionalJOption>-Xdoclint:none</additionalJOption>
                            <groups>
                                <group>
                                    <title>Exousia ${project.version}</title>
                                    <packages>org.glassfish.exousia</packages>
                                </group>
                            </groups>
                            <bottom><![CDATA[
Comments to: <a href="mailto:wasp-dev@eclipse.org">exousia-dev@eclipse.org</a>.<br>
Copyright &#169; 2021 Eclipse Foundation. All rights reserved.<br>
Use is subject to <a href="https://www.eclipse.org/legal/epl-2.0" target="_top">license terms</a>.]]>
                            </bottom>
                            <links>
                                <link>https://jakarta.ee/specifications/platform/9/apidocs/</link>
                            </links>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
           
        </plugins>
    </build>
</project>
